--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -62,7 +62,7 @@
 		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -94,7 +94,7 @@
 		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -126,7 +126,7 @@
 		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="torture.html">Torture</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -158,7 +158,7 @@
 		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -190,7 +190,7 @@
 		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
