--- a/pages/pun.html
+++ b/pages/pun.html
@@ -52,7 +52,7 @@
 		<h4>Tags</h4>
 		<a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
