--- a/pages/group.html
+++ b/pages/group.html
@@ -45,13 +45,13 @@
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li><strong>Player 1: "We could call it The Chameleon!"</strong></li>
-			<li><strong>Player 2: "Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings."</strong></li>
-			<li><strong>Player 3: "Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher."</strong></li>
-			<li><strong>Player 4: "We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide."</strong></li>
-			<li><strong>Player 3: "We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!"</strong></li>
-			<li><strong>Player 2: "When you don't want to be seen, this is your machine."</strong></li>
-			<li><strong>Player 4: "Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!"</strong></li>
+			<li><strong>Player 1:</strong> "<em>We could call it The Chameleon!</em>"</li>
+			<li><strong>Player 2:</strong> "<em>Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings.</em>"</li>
+			<li><strong>Player 3:</strong> "<em>Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher.</em>"</li>
+			<li><strong>Player 4:</strong> "<em>We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide.</em>"</li>
+			<li><strong>Player 3:</strong> "<em>We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!</em>"</li>
+			<li><strong>Player 2:</strong> "<em>When you don't want to be seen, this is your machine.</em>"</li>
+			<li><strong>Player 4:</strong> "<em>Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!</em>"</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
@@ -66,7 +66,7 @@
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
