--- a/pages/narrative.html
+++ b/pages/narrative.html
@@ -61,7 +61,7 @@
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercises</a> - <a href="interview.html">Interview</a> - <a href="listening.html">Listening</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -93,7 +93,7 @@
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
