--- a/pages/performance.html
+++ b/pages/performance.html
@@ -82,7 +82,7 @@
 		<h4>Tags</h4>
 		<a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -105,13 +105,13 @@
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li><strong>Player 1: "We could call it The Chameleon!"</strong></li>
-			<li><strong>Player 2: "Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings."</strong></li>
-			<li><strong>Player 3: "Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher."</strong></li>
-			<li><strong>Player 4: "We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide."</strong></li>
-			<li><strong>Player 3: "We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!"</strong></li>
-			<li><strong>Player 2: "When you don't want to be seen, this is your machine."</strong></li>
-			<li><strong>Player 4: "Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!"</strong></li>
+			<li><strong>Player 1:</strong> "<em>We could call it The Chameleon!</em>"</li>
+			<li><strong>Player 2:</strong> "<em>Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings.</em>"</li>
+			<li><strong>Player 3:</strong> "<em>Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher.</em>"</li>
+			<li><strong>Player 4:</strong> "<em>We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide.</em>"</li>
+			<li><strong>Player 3:</strong> "<em>We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!</em>"</li>
+			<li><strong>Player 2:</strong> "<em>When you don't want to be seen, this is your machine.</em>"</li>
+			<li><strong>Player 4:</strong> "<em>Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!</em>"</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
@@ -126,7 +126,7 @@
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -158,7 +158,7 @@
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -190,7 +190,7 @@
 		<h4>Tags</h4>
 		<a href="gibberish.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -222,7 +222,7 @@
 		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="torture.html">Torture</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -254,7 +254,7 @@
 		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -290,7 +290,7 @@
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercises</a> - <a href="interview.html">Interview</a> - <a href="listening.html">Listening</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -322,7 +322,7 @@
 		<h4>Tags</h4>
 		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -354,7 +354,7 @@
 		<h4>Tags</h4>
 		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="sentences.html">Sentences</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -386,7 +386,7 @@
 		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -418,7 +418,7 @@
 		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
