--- a/pages/song_formats.html
+++ b/pages/song_formats.html
@@ -31,30 +31,35 @@
 	<div class="game-box p-2" id="taglineSong">
 		<h2>Tagline Song</h2>
 		<hr>
-		<h3>Format</h3>
+		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>A simple tagline is descovered through a scene or suggestion.</li>
+			<li>Then the music will come in and the improvisers will sing a song with four parts.</li>
+			<li>In a front facing tagline song each verse starts with the Tagline.</li>
+			<li>In a back facing tagline song each verse ends with the tagline, so you know before you start what rhyme you need to set up.</li>
 		</ul><hr>
-		<h3>Example</h3>
+		<h3>Structure</h3>
 		<ul>
-			<li>Example text</li>
-		</ul><hr>
-		<h3>Purpose</h3>
-		<ul>
-			<li>Purpose text</li>
+			<li>Tagline Verse</li>
+			<li>Tagline Verse</li>
+			<li>Bridge that does not include the tagline</li>
+			<li>Tagline Verse</li>
+			<li>Optionally: repeat the tagline for a big finish!</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
+			<li>If the tagline ends with an easy rhyme, go for a back facing tagline</li>
+			<li>If the tagline seems hard to rhyme with, start your verse with the tagline.</li>
+			<li>Other singers can sing the tagline on each verse even if it's not their verse. Especially at the end.</li>
 		</ul><hr>
 		<h3>Sources</h3>
 		<ul>
-			<li>Sources text</li>
+			<li><a href="https://www.openyourmouthandsing.co.uk/tagline-song.html">openyourmouthandsing.co.uk</a></li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="musical.html">Musical</a> - <a href="song_formats.html">Song Format</a> - 
 		<hr>
-		<h5><a href="#top">Back to Top</a></h5>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
