Fixing typos, changing colors

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -15,7 +15,7 @@
 </header>
 <body>
   <h1 class="text-center my-3">Categories</h1>
-  <p class="m-5 accent">Improvitorium is a destination for all things comedy improvisation! It contains a wealth resources designed to enhance your improv skills and ignite your comedic prowess. Explore a collection of rules, descriptions, and strategies for a myriad of games, exercises, and forms, curated to inspire and challenge both novice and seasoned performers alike. Delve into our educational improv hub, brimming with manuals, insightful infographics, and sage advice from industry veterans, providing invaluable guidance every step of the way. Whether you're seeking inspiration, instruction, or entertainment, Improvsitory offers a wealth of video examples, recommended reading, and links to similar websites, ensuring you're equipped with the tools you need to thrive in the world of comedy improvisation. Plus, discover how to locate theaters near you, where you can witness live performances and even take part in workshops to hone your craft. Get ready to unleash your creativity and join a vibrant community of improv enthusiasts at Improvsitory!</p>
+  <p class="m-5 accent text-center">Stop here to check out all the various categories of games and exercises!</p>
   <div class="m-5">
     <h2>Categories</h2>
     <!-- <div class="ten-column-list"> -->
@@ -78,11 +78,11 @@
       </tr>
     </table> -->
   </div>
-  <footer>
-    <div class="d-flex flex-wrap justify-content-around">
-      <a class="mx-5 py-2" href="../index.html">Home</a>
-      <a class="mx-5 py-2" href="../pages/categories.html">Games Exerciese and Formats</a>
-    </div>
-  </footer>
 </body>
+<footer>
+  <div class="d-flex flex-wrap justify-content-around">
+    <a class="mx-5 py-2" href="../index.html">Home</a>
+    <a class="mx-5 py-2" href="../pages/categories.html">Games Exerciese and Formats</a>
+  </div>
+</footer>
 </html>
