--- a/pages/character.html
+++ b/pages/character.html
@@ -42,7 +42,7 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Several improvisers from a back line.</li>
+			<li>Several improvisers form a back line.</li>
 			<li>One player steps forward, they will be the chameleon.</li>
 			<li>One at a time players step off the back line to initiate a short scene with the chameleon.</li>
 			<li>They should enter with a strong character choice.</li>
